tests/invalid/main_guard_left_not_name/main.py
def run_case() -> None:
    print("x")


if 1 == "__main__":
    run_case()
